6/9 수업 코드 업로드

--- a/Python/python_numpy.ipynb
+++ b/Python/python_numpy.ipynb
@@ -831,7 +831,7 @@
     "print(\"2. 1차원을 2차원으로 변경: \\n\", arr1D) # [[1 2 3][4 5 6]]\n",
     "print()\n",
     "arr1D.shape=(-1, 2)   # 열크기에 의해서 행크기가 자동 지정됨\n",
-    "print(\"2. 1차원을 2차원으로 변경: \\n\", arr1D) # [[1 2 3][4 5 6]]\n",
+    "print(\"2. 1차원을 2차원으로 변경: \\n\", arr1D)\n",
     "print()"
    ]
   },
