6/11 빅분기 실기 공부

--- a/빅데이터분석기사/빅데이터분석기사_실기.md
+++ b/빅데이터분석기사/빅데이터분석기사_실기.md
@@ -387,7 +387,7 @@ target.to_csv['파일명.csv', index=False]
         
     4. DicisionTreeRegressor
     
-        - `from sklearn.tree import DecisionTreeRegressor
+        - `from sklearn.tree import DecisionTreeRegressor`
         
     5. RandomForestRegressor
     
@@ -398,3 +398,104 @@ target.to_csv['파일명.csv', index=False]
 roc_auc_score(y_test, y_pred)
 model.score(x_test, y_test)
 ```
+
+## 작업 3유형
+
+- 통계적 검정
+
+1. 통계적 검정용 모듈: SciPy 모듈
+
+2. 확률분포
+
+    - 분포: 일정한 범위 안에 흩어져 퍼져 있는 정도
+    
+    - 확률변수: random variable, 확률 현상에 기인해 결과값이 확률적으로 정해지는 변수</br>확률현상: 어떤 결과들이 나올지 알지만, 가능한 결과 중 어떤 결과가 나올지 모르는 현상
+    
+    - 확률분포: 어떤 확률변수가 취할 수 있는 모든 값들과 그 값을 취할 확률의 대응관계로 표시하는 것
+    
+3. 이산형 확률분포: 확률변수가 몇 개의 한정된 가능한 값을 가진느 분포. 각 사건은 서로 독립이어야 한다.</br>예) 이항분포, 베르누이분포, 기하분포, 초기하분포, 포아송분포 등
+    
+    - 베르누이 분포
+    
+        - 매 시행마다 오직 두 가지의 가능한 결과만 일어난다고 할 때, 이러한 실험을 1회 시행하여 일어난 두 가지 결과에 의해 값이 각각 0과 1로 결정하며, 다음을 만족하는 확률변수 X가 따르는 확률분포</br>P(X=1) = p, P(X=0)=q, 0 <= p <= 1, q = 1-p
+        
+        - 베르누이 분포의 모수는 p, 기댓값은 E(X) = p, 분산은 Var(X) = pq이다.
+    
+    - 기하분포: 베르누이 시행에서 처음 성공까지 시도한 횟수 X의 분포.
+    
+        - 성공확률 p인 베르누이 시행에 대해 x번 시행 후 첫 번째 성공을 얻을 확률. X ~ Geom(p)로 표기
+        
+        - 계속 실패하다가 x번째에서 성공할 확률을 구할 때 사용함: 문제에서 성공확률, 실패확률 및 실패횟수를 파악해야 함
+        
+        - 생성법
+        ```python
+        from scipy.stats import geom # 기하분포 객체 생성함수 import
+        geom(p=c)                    # 확률 p=c인 기하확률분포 객체 생성
+        y1 = geom(p=c).pmf(x)        # 기하분포의 pmf(특정 횟수 때) 사용, x:확률변수 값, p:확률
+        
+        geom(0.1).pmf(5)             # 5번째 성공 시 예시
+        
+        y2 = geom(p=c).cdf(x)        # 기하분포의 cdf(특정 횟수 이내, 이상) 사용, x:확률변수 값, p:확률
+        
+        geom(0.1).cdf(5)             # 5번 이내 성공 예시
+        1-geom(0.1).cdf(4)           # 5번 이상에서 성공 예시
+        ```
+    
+    - 초기하분포: 비복원추출로 매 실험 조건이 달라지는 경우 사용하는 확률분포(이항분포는 '복원추출'을 사용)
+    
+        - M개의 구성원으로 이루어진 전체 모집단, 이 모집단이 두 그룹으로 나누어질 때 첫 번째 그룹에 n개의 구성원이 있고, 다른 그룹에는 M-n개의 구성원이 존재.
+        
+            - 이 상황에서 초기하 확률변수 X는 전체 모집단(M)에서 N개의 샘플을 비복원추출 할 때, N개 샘플 중에서 첫 번째 그룹에 해당하는 샘플 수를 의미한다.
+        
+        - M개 중 N번 '비복원추출'했을 때 원하는 것 k개가 뽑힐 확률의 분포
+        
+        - 생성법
+        ```python
+        from scipy.stats import hypergeom       # 기하분포 객체 생성 함수 import
+        hypergeom(M=100, n=30, N=20)            # 초기하 분포 객체 생성(모집단(M), 성공요소의 개수(n), 시행횟수(N))
+        y1 = hypergeom(M=a, n=b, N=c).pmf(x)    # 초기하분포의 pmf(x=N개 중 성공요소의 수)
+        y1 = hypergeom(M=a, n=b, N=c).cdf(x)    # 초기하분포의 cdf(x=N개 중 성공요소의 수)
+        ```
+        
+    - 포아송분포: 단위 시간이나 단위 공간에서 어떤 사건이 몇 번 발생할 것인지를 표현하는 분포
+    
+        - 단위 시간 또는 단위 공간 내에서 발생한느 사건의 발생횟수에 따른 확률을 구할 때 사용한다.
+        
+        - 확률을 구하기 위해 사건의 평균(λ)과 발생횟수(X)를 알아야 한다.
+        
+        - 단위에 대한 부분을 주의해야 한다.(맞춰줘야 함: 분이면 분, 일이면 일 등)
+        
+        - 생성법
+        ```python
+        from scipy.stats import poisson # 포아송 객체 생성 함수 import
+        poisson(mu=2)                   # 포아송분포 객체 생성, mu=평균사건발생횟수
+        y1 = poissom(mu=2).pmf(x)       # 포아송분포의 pmf. x=확률변수 값(단위시간/공간에서의 사건 발생 횟수)
+        y1 = poissom(mu=2).cdf(x)       # 포아송분포의 cdf. x=확률변수 값(단위시간/공간에서의 사건 발생 횟수)
+        ```
+    
+4. 연속형 확률분포: 확률변수의 가능한 값이 무한 개이며 사실상 셀 수 없을 때</br>예) 정규분포, 연속균일분포, 지수분포, 감마분포, 카이제곱분포, F분포 등
+
+    - 정규분포: 가우스분포라고도 하며, 평균과 표준편차(σ)에 대해 모양이 결정되고, N(평균, 분산)로 표기함
+    
+        - 평균 0, 표준편차/분산 1인 정규 분포 N(0, 1)을 표준 정규분포, Z 분포라고 함
+        
+        - 평균 주위로 값들이 표준편차의 1배 범위 안에 있을 확률 0.68, 2배 범위 안 0.95, 3배 범위 안 0.997이다.
+        
+        - 생성법
+        ```python
+        from scipy.stats import norm                                # 정규분포 객체 생성함수 import
+        norm(loc=0, sclae=1)                                        # 정규분포 객체 생성. loc=평균, scale=표준편차
+        
+        y1 = norm(loc=mu, scale = std).pdf(x)                       # pdf 사용. x=확률변수값(평균)/배열도 가능
+        y1 = norm(loc=mu, scale = std).cdf(x)                       # cdf 사용. x=확률변수값(평균)/배열도 가능
+        y1 = norm(loc=mu, scale = stderr).ppf(confidence)           # ppf 사용(표본오차, 신뢰도 등을 구할 때 사용. 임계값을 구하는데 사용.). confidence: 확률값, 신뢰도(계산 필요), scale=표준오차
+        r1, r2 = norm.interval(confidence, loc=mu, scale=stderr)    # interval 사용. confidence=신뢰도. scale=표준오차.
+        ```
+        
+        - 표준오차는 stats.sem(data)를 사용해 구할 수 있다(=표준편차/n ** 0.5)
+        
+        - cdf와 ppf는 입출력이 반대 개념이다.
+        
+        - ppf에서 신뢰도 95%일 때 confidence는 [0.025, 0.975]를 입력
+        
+        - interval은 신뢰구간을 구하는 메서드. 신뢰도 95%일 때 confidence는 0.95를 넣는다.
