--- a/Python/python_numpy.ipynb
+++ b/Python/python_numpy.ipynb
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2539,6 +2539,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. original:  [1 2 3 4]\n",
+      "2. np.sum:  10\n",
+      "3. np.sum(keepdims=True):  [10]\n",
+      "4. original:  [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "5. np.sum(axis=0):  [ 9 12]\n",
+      "6. np.sum(axis=1):  [ 3  7 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. np.sum: 1차원 배열 원소간 합\n",
+    "b = np.array([1, 2, 3, 4])\n",
+    "#print(\"average:\" , np.average(b))\n",
+    "print(\"1. original: \" , b ) # [1 2 3 4]\n",
+    "print(\"2. np.sum: \" , np.sum(b) ) # 1+2+3+4 = 10                        , 스칼라 값으로 배월 원소 간 합을 반환\n",
+    "print(\"3. np.sum(keepdims=True): \" , np.sum(b , keepdims=True) ) # [10] , 1차원 배열로 배열 원소 간 합을 반환\n",
+    "\n",
+    "# 2. np.sum: 2차원 배열 원소간 합\n",
+    "c = np.array([[1, 2], [3, 4],[5,6]])\n",
+    "print(\"4. original: \" , c )\n",
+    "print(\"5. np.sum(axis=0): \" , np.sum(c , axis=0) ) # [ 9 12]    위 + 아래  ( axis=0 인 행축 기준 )\n",
+    "print(\"6. np.sum(axis=1): \" , np.sum(c , axis=1) ) # [ 3  7 11] 왼쪽 + 오른쪽 ( axis=1인 열축 기준 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7. original:  [[ 1.  2.]\n",
+      " [ 3. nan]]\n",
+      "8. np.sum(axis=0):  [ 4. nan]\n",
+      "9. np.sum(axis=1):  [ 3. nan]\n",
+      "10. np.nansum(axis=0):  [4. 2.]\n",
+      "11. np.nansum(axis=1):  [3. 3.]\n",
+      "12. original:  [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "13. np.cumsum(axis=0):  [[ 1  2]\n",
+      " [ 4  6]\n",
+      " [ 9 12]]\n",
+      "14. np.cumsum(axis=1):  [[ 1  3]\n",
+      " [ 3  7]\n",
+      " [ 5 11]]\n",
+      "9.  1차원 배열 np.mean(arr) :  2.5\n",
+      "10. 2차원 배열 np.mean(arr, axis=0):  [1. 2. 3. 4.]\n",
+      "11. 2차원 배열 np.mean(arr, axis=1): [2.5 2.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. np.nansum: NaN 을 0로 간주하고 배열 원소 간 합처리\n",
+    "c = np.array([[1, 2], [3, np.nan]])\n",
+    "print(\"7. original: \" , c )\n",
+    "print(\"8. np.sum(axis=0): \" , np.sum(c , axis=0) ) # [ 4. nan]       위 + 아래\n",
+    "print(\"9. np.sum(axis=1): \" , np.sum(c , axis=1) ) # [ 3. nan]       왼쪽 + 오른쪽\n",
+    "print(\"10. np.nansum(axis=0): \" , np.nansum(c , axis=0) ) # [4. 2.]  위 + 아래\n",
+    "print(\"11. np.nansum(axis=1): \" , np.nansum(c , axis=1) ) # [3. 3.]  왼쪽 + 오른쪽\n",
+    "\n",
+    "# 4. np.cumsum: 배열 원소간 누적 합하기(중요)\n",
+    "c = np.array([[1, 2], [3, 4],[5,6]])\n",
+    "print(\"12. original: \" , c )\n",
+    "print(\"13. np.cumsum(axis=0): \", np.cumsum(c, axis=0) ) # [[ 1 2][1+3 2+4][1+3+5 2+4+6]]\n",
+    "print(\"14. np.cumsum(axis=1): \", np.cumsum(c, axis=1) ) # [[ 1 1+2][3 3+4][5 5+6]]\n",
+    "\n",
+    "# 5. np.mean ==> 평균 (sql -> avg / python - 제공 안 됨)\n",
+    "print(\"9.  1차원 배열 np.mean(arr) : \", np.mean([1, 2, 3, 4]))  # 2.5\n",
+    "print(\"10. 2차원 배열 np.mean(arr, axis=0): \",\n",
+    "      np.mean([[1, 2, 3, 4],[1, 2, 3, 4]], axis=0))  # [1. 2. 3. 4.]\n",
+    "print(\"11. 2차원 배열 np.mean(arr, axis=1):\",\n",
+    "      np.mean([[1, 2, 3, 4],[1, 2, 3, 4]], axis=1))  # [2.5 2.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6. 8. 3. 5. 1]의 중앙값: 5.0\n",
+      "[6, 8, 3, 5, 1, 9]의 중앙값: [6 8 3 5 1 9]\n",
+      "12. 1차원 배열 np.var(arr):  246.5\n",
+      "13. 2차원 배열 np.var(arr, axis=0):  [  2.25  49.     4.   400.  ]\n",
+      "14. 2차원 배열 np.var(arr, axis=1):  [ 246.5    1037.1875]\n",
+      "15. 1차원 배열 np.std(arr):  15.700318468107582 15.700318468107582\n",
+      "16. 2차원 배열 np.std(arr, axis=0):  [ 1.5  7.   2.  20. ]\n",
+      "17. 2차원 배열 np.std(arr, axis=1):  [15.70031847 32.20539551]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. np.median ==> 중앙값 (내부적으로 정렬하고 가운데 있는 값을 반환)\n",
+    "arr = np.array([6, 8, 3, 5, 1])\n",
+    "print(\"[6. 8. 3. 5. 1]의 중앙값:\", np.median(arr))\n",
+    "arr2 = np.array([6, 8, 3, 5, 1, 9])\n",
+    "print(\"[6, 8, 3, 5, 1, 9]의 중앙값:\", arr2)\n",
+    "\n",
+    "# 7. np.var ==> 분산 ( 관측값에서 평균을 뺀값을 제곱하고 모두 더해서 갯수로 나눈다. 즉, 차이값(잔차)의 제곱의 평균이다.\n",
+    "print(\"12. 1차원 배열 np.var(arr): \", np.var([1, 20, 3, 40]))  # 246.5\n",
+    "print(\"13. 2차원 배열 np.var(arr, axis=0): \",\n",
+    "      np.var([[1, 20, 3, 40],[4, 6, 7, 80]], axis=0))  # [  2.25  49.     4.   400.\n",
+    "print(\"14. 2차원 배열 np.var(arr, axis=1): \",\n",
+    "      np.var([[1, 20, 3, 40],[4, 6, 7, 80]], axis=1))  # [ 246.5    1037.1875]\n",
+    "\n",
+    "# 8. np.std ==> 표준 편차 ( 분산을 제곱근한 것이다. 제곱해서 값이 부풀려진 것을 다시 원래대로 복원)\n",
+    "print(\"15. 1차원 배열 np.std(arr): \", np.std([1, 20, 3, 40]), np.sqrt(np.var([1, 20, 3, 40])))  # 15.700318468107582\n",
+    "print(\"16. 2차원 배열 np.std(arr, axis=0): \",\n",
+    "      np.std([[1, 20, 3, 40],[4, 6, 7, 80]], axis=0))  # [ 1.5  7.   2.  20. ]\n",
+    "print(\"17. 2차원 배열 np.std(arr, axis=1): \",\n",
+    "      np.std([[1, 20, 3, 40],[4, 6, 7, 80]], axis=1))  # [15.70031847 32.20539551]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###### 이항 유니버셜 함수"
    ]
   },
@@ -2921,11 +3059,434 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### 유틸리티 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. original:  [1 2 3 4]\n",
+      "2. np.prod(arr):  24\n",
+      "3. original:\n",
+      " [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "4. np.prod(axis=0):  [15 48]\n",
+      "5. np.prod(axis=1):  [ 2 12 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. np.prod: 1차원 배열 원소간 곱계산인 product\n",
+    "b = np.array([1, 2, 3, 4])\n",
+    "print(\"1. original: \" , b ) # [1 2 3 4]\n",
+    "print(\"2. np.prod(arr): \" , np.prod(b) ) # 1*2*3*4 = 24\n",
+    "\n",
+    "# 2. np.prod: 2차원 배열 원소간 곱계산인 product\n",
+    "c = np.array([[1, 2], [3, 4],[5,6]])\n",
+    "print(\"3. original:\\n\" , c )\n",
+    "print(\"4. np.prod(axis=0): \" , np.prod(c , axis=0) ) # [15 48]    위 * 아래 ( axis=0 인 행축 기준 )\n",
+    "print(\"5. np.prod(axis=1): \" , np.prod(c , axis=1) ) # [ 2 12 30] 왼쪽 * 오른쪽 ( axis=1인 열축 기준 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.original:  [[ 1.  2.]\n",
+      " [ 3. nan]]\n",
+      "7. np.prod(axis=0):  [ 3. nan]\n",
+      "8. np.prod(axis=1):  [ 2. nan]\n",
+      "9. np.nanprod(axis=0):  [3. 2.]\n",
+      "10. np.nanprod(axis=1):  [2. 3.]\n",
+      "11. original:  [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "12. np.cumprod(axis=0):  [[ 1  2]\n",
+      " [ 3  8]\n",
+      " [15 48]]\n",
+      "13. np.cumprod(axis=1):  [[ 1  2]\n",
+      " [ 3 12]\n",
+      " [ 5 30]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. np.nanprod: NaN 을 1로 간주하고 배열 원소 간 곱처리\n",
+    "c = np.array([[1, 2], [3, np.nan]])\n",
+    "print(\"6.original: \" , c )\n",
+    "print(\"7. np.prod(axis=0): \" , np.prod(c , axis=0) ) # [ 3. nan]      위 * 아래 ( axis=0 인 행축 기준 )\n",
+    "print(\"8. np.prod(axis=1): \" , np.prod(c , axis=1) ) # [ 2. nan]      왼쪽 * 오른쪽 ( axis=1인 열축 기준 )\n",
+    "print(\"9. np.nanprod(axis=0): \" , np.nanprod(c , axis=0) ) # [3. 2.]  위 * 아래\n",
+    "print(\"10. np.nanprod(axis=1): \" , np.nanprod(c , axis=1) ) # [2. 3.] 왼쪽 * 오른쪽\n",
+    "\n",
+    "# 4. np.cumprod: 배열 원소간 누적 곱하기\n",
+    "c = np.array([[1, 2], [3, 4],[5,6]])\n",
+    "print(\"11. original: \" , c )\n",
+    "print(\"12. np.cumprod(axis=0): \", np.cumprod(c, axis=0)) # [[ 1 2][ 1*3 2*4] [1*3*5 2*4*6]]\n",
+    "print(\"13. np.cumprod(axis=1): \", np.cumprod(c, axis=1)) # [[ 1 1*2] [3 3*4] [5 5*6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 1차원 배열 np.max(arr):  10\n",
+      "2. 1차원 배열 np.min(arr):  1\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "3. 2차원 배열, 각 열에서 최대값: [12 13 14 15]\n",
+      "4. 2차원 배열, 각 열에서 최소값: [0 1 2 3]\n",
+      "5. 2차원 배열, 각 행에서 최대값: [ 3  7 11 15]\n",
+      "6. 2차원 배열, 각 행에서 최소값: [ 0  4  8 12]\n",
+      "1. 1차원 배열 최대 index값:  10 4\n",
+      "2. 1차원 배열 최소 index값:  1 5\n",
+      "[[ 6  2  4]\n",
+      " [10  1 54]\n",
+      " [66  3 21]]\n",
+      "3. 2차원 배열, 각 열에서 최대 index값: [2 2 1]\n",
+      "4. 2차원 배열, 각 열에서 최소 index값: [0 1 0]\n",
+      "5. 2차원 배열, 각 행에서 최대 index값: [0 2 0]\n",
+      "6. 2차원 배열, 각 행에서 최소 index값: [1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. 최대/최소값\n",
+    "data = np.array([8,2,4,5,10,1])\n",
+    "print(\"1. 1차원 배열 np.max(arr): \" , np.max(data))\n",
+    "print(\"2. 1차원 배열 np.min(arr): \" , np.min(data))\n",
+    "\n",
+    "data = np.array(np.arange(16).reshape(4,4))\n",
+    "print(data)\n",
+    "print(\"3. 2차원 배열, 각 열에서 최대값:\" , np.max(data,  axis=0)) # [12 13 14 15]\n",
+    "print(\"4. 2차원 배열, 각 열에서 최소값:\" , np.min(data,  axis=0 )) # [0 1 2 3]\n",
+    "print(\"5. 2차원 배열, 각 행에서 최대값:\" , np.max(data,  axis=1)) # [ 3  7 11 15]\n",
+    "print(\"6. 2차원 배열, 각 행에서 최소값:\" , np.min(data,  axis=1 )) # [ 0  4  8 12]\n",
+    "\n",
+    "# 6.  최대/최소값에 해당하는 인덱스 반환\n",
+    "data = np.array([8,2,4,5,10,1])\n",
+    "print(\"1. 1차원 배열 최대 index값: \" , np.max(data), np.argmax(data)) # 10 4\n",
+    "print(\"2. 1차원 배열 최소 index값: \" , np.min(data), np.argmin(data)) # 1  5\n",
+    "\n",
+    "data = np.array([[6,2,4],[10,1,54],[66,3,21]])\n",
+    "print(data)\n",
+    "print(\"3. 2차원 배열, 각 열에서 최대 index값:\" , np.argmax(data,  axis=0)) # [2 2 1]\n",
+    "print(\"4. 2차원 배열, 각 열에서 최소 index값:\" , np.argmin(data,  axis=0 )) # [0 1 0]\n",
+    "print(\"5. 2차원 배열, 각 행에서 최대 index값:\" , np.argmax(data,  axis=1)) # [0 2 0]\n",
+    "print(\"6. 2차원 배열, 각 행에서 최소 index값:\" , np.argmin(data,  axis=1 )) # [1 1 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 1차원 배열 sort 전:  [ 8  2  4  5 10  1]\n",
+      "2. 1차원 배열 sort 후(오름차순):  [ 1  2  4  5  8 10]\n",
+      "3. 1차원 배열 sort 후(내림차순):  [10  8  5  4  2  1]\n",
+      "\n",
+      "6. axis=None(flattened): [  1   2   4   5   8  10  33  66  67  77  90 100]\n",
+      "\n",
+      "[[  8   2   4]\n",
+      " [ 99  44  33]\n",
+      " [100  67  77]]\n",
+      "[[  2   4   8]\n",
+      " [ 33  67 100]\n",
+      " [ 44  77  99]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python에서의 정렬\n",
+    "# 1. sorted(값)\n",
+    "#  - __builtins__객체의 함수\n",
+    "#  - 정렬된 복사본 반환\n",
+    "    \n",
+    "# 2. 객체.sort(reverse=True)\n",
+    "#  - 객체의 함수\n",
+    "#  - 자신이 정렬\n",
+    "\n",
+    "# 7.  1차원 정렬 - 내림차순으로 반환해주는 파라미터가 없음\n",
+    "\n",
+    "data = np.array([8,2,4,5,10,1])\n",
+    "print(\"1. 1차원 배열 sort 전: \",data) # [ 8  2  4  5 10  1]\n",
+    "print(\"2. 1차원 배열 sort 후(오름차순): \",np.sort(data)) # [ 1  2  4  5  8 10]\n",
+    "print(\"3. 1차원 배열 sort 후(내림차순): \",np.sort(data)[::-1]) # [10  8  5  4  2  1]\n",
+    "print()\n",
+    "\n",
+    "# 8. 2차원 정렬\n",
+    "data = np.array([[8,2,4,5,10,1],[100,67,33,77,66,90]])\n",
+    "\n",
+    "data3 = np.sort(data, axis=None) # flattened\n",
+    "print(\"6. axis=None(flattened):\", data3) # [  1   2   4   5   8  10  33  66  67  77  90 100]\n",
+    "print()\n",
+    "arr = np.array([[8,2,4],[100,67,33],[99,44,77]])\n",
+    "# [[  8   2   4]\n",
+    "#  [100  67  33]\n",
+    "#  [ 99  44  77]]\n",
+    "data4 = np.sort(arr, axis=0) # 컬럼단위로 정렬\n",
+    "print(data4)\n",
+    "# [[  8   2   4]\n",
+    "#  [ 99  44  33]\n",
+    "#  [100  67  77]]\n",
+    "data4 = np.sort(arr, axis=1)  # 행단위로 정렬\n",
+    "print(data4)\n",
+    "# [[  2   4   8]\n",
+    "#  [ 33  67 100]\n",
+    "#  [ 44  77  99]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. 모든 값이 True 냐?:  True\n",
+      "2. np.all(arr):  False\n",
+      "3. np.any(arr):  True\n",
+      "[False False  True  True]\n",
+      "all a>b ?: False\n",
+      "any a>b ?: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. np.all, np.any ==> 논리값을 가진 다차원 배열을 하나의 논리값으로 처리할 때 사용\n",
+    "print(\"1. 모든 값이 True 냐?: \", np.all([True, True])) #  True\n",
+    "x = np.array([1,0,0,0])\n",
+    "print(\"2. np.all(arr): \", np.all(x)) #  False\n",
+    "print(\"3. np.any(arr): \", np.any(x)) #  True\n",
+    "\n",
+    "# 6. np.all, np.any 활용\n",
+    "a = np.array([1, 2, 3, 4])\n",
+    "b = np.array([4, 3, 2, 1])\n",
+    "print(a>b)\n",
+    "print(\"all a>b ?:\", np.all(a > b)) # False\n",
+    "print(\"any a>b ?:\", np.any(a > b)) # False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. original:  [[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]]\n",
+      "\n",
+      "2. T: [[ 0  5 10]\n",
+      " [ 1  6 11]\n",
+      " [ 2  7 12]\n",
+      " [ 3  8 13]\n",
+      " [ 4  9 14]]\n",
+      "3. transpose() [[ 0  5 10]\n",
+      " [ 1  6 11]\n",
+      " [ 2  7 12]\n",
+      " [ 3  8 13]\n",
+      " [ 4  9 14]]\n",
+      "1. original:  [[0 1]\n",
+      " [2 3]]\n",
+      "2. np.dot(arr, arr2) - 행렬곱:   [[ 2  3]\n",
+      " [ 6 11]]\n",
+      "4. arr @ arr2) - 행렬곱:   [[ 2  3]\n",
+      " [ 6 11]]\n",
+      "5. 벡터 내적:  14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7. 전치  (Transpose)\n",
+    "arr = np.arange(15).reshape(3,5)\n",
+    "print(\"1. original: \", arr)\n",
+    "print()\n",
+    "print(\"2. T:\", arr.T)  # Transpose\n",
+    "print(\"3. transpose()\",arr.transpose())  # Transpose\n",
+    "\n",
+    "# 8. 행렬곱( dot product(점곱), 곱해서 합 ) ==>  np.dot(a,b),  a @ b (중요)\n",
+    "'''\n",
+    "  벡터 내적: 1차원인 벡터간의 곱연산후 합 의미\n",
+    "  행렬곱(점곱, dot product): 행렬간의 곱연산후 합 의미\n",
+    "'''\n",
+    "arr = np.arange(4).reshape(2,2)\n",
+    "print(\"1. original: \",arr)\n",
+    "print(\"2. np.dot(arr, arr2) - 행렬곱:  \",  np.dot(arr,arr))\n",
+    "print(\"4. arr @ arr2) - 행렬곱:  \",  arr @ arr )\n",
+    "arr = np.arange(4)\n",
+    "print(\"5. 벡터 내적: \", np.dot(arr, arr)) # 0*0 + 1*1 + 2*2 + 3*3 = 14"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 차원 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3] (3,)\n",
+      "[[1 2 3]] (1, 3)\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[[1 2 3]] (1, 3)\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[[1 2 3]] (1, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 차원 증가\n",
+    "# 1) reshape((행, 열))\n",
+    "arr1D = np.array([1, 2, 3])\n",
+    "print(arr1D, arr1D.shape)\n",
+    "\n",
+    "arr2D = arr1D.reshape((1, -1)) # (1, 3)\n",
+    "print(arr2D, arr2D.shape)\n",
+    "print('-'*100)\n",
+    "\n",
+    "# 2) np.expand_dims(arr1D, axis=0)\n",
+    "arr1D = np.array([1, 2, 3])\n",
+    "arr2D = np.expand_dims(arr1D, axis=0)\n",
+    "print(arr2D, arr2D.shape)\n",
+    "print('-'*100)\n",
+    "\n",
+    "# 3) arr1D[np.newaxis, …(:)] -> 최근 많이 사용\n",
+    "arr1D = np.array([1, 2, 3])\n",
+    "arr2D = arr1D[np.newaxis, :]\n",
+    "print(arr2D, arr2D.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 2]] (1, 3)\n",
+      "[0 1 2] (3,)\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[[100   1   2]]\n",
+      "flatten: [0 1 2]\n",
+      "ravel: [100   1   2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 차원 감소\n",
+    "# 1) np.squeeze(arr2D, axis=0): n차원 -> n-1차원\n",
+    "arr2D = np.arange(3).reshape(1, 3)\n",
+    "print(arr2D, arr2D.shape)\n",
+    "arr1D = np.squeeze(arr2D, axis=0)\n",
+    "print(arr1D, arr1D.shape)\n",
+    "print('-'*100)\n",
+    "\n",
+    "# 2) arrND.flatten(): n차원 -> 1차원, 복사본 반환(원본 영향 X)\n",
+    "# 3) arrND.ravel(): n차원 -> 1차원, view 반환(원본 영향 O)\n",
+    "xxx = arr2D.flatten()   # 복사본 반환\n",
+    "yyy = arr2D.ravel()     # 원본과 연결\n",
+    "\n",
+    "arr2D[0, 0] = 100\n",
+    "print(arr2D)\n",
+    "print(\"flatten:\", xxx)\n",
+    "print('ravel:', yyy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "색인1: [1 4]\n",
+      "색인2: [[1]\n",
+      " [4]]\n",
+      "[[100 200   1   2   3]\n",
+      " [100 200   4   5   6]]\n",
+      "[[100   1   2   3]\n",
+      " [200   4   5   6]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n[[100   1   2   3]\\n [200   4   5   6]]\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3],[4,5,6]])\n",
+    "'''\n",
+    "[[1 2 3]\n",
+    " [4 5 6]]\n",
+    "'''\n",
+    "print(\"색인1:\", arr[..., 0])\n",
+    "print(\"색인2:\", arr[..., [0]])\n",
+    "\n",
+    "xxx = np.insert(arr, 0,  [[100],[200]], axis=1)\n",
+    "print(xxx)\n",
+    "'''\n",
+    "[[100 200   1   2   3]\n",
+    " [100 200   4   5   6]]\n",
+    "'''\n",
+    "xxx = np.insert(arr, [0], [[100],[200]], axis=1)\n",
+    "print(xxx)\n",
+    "'''\n",
+    "[[100   1   2   3]\n",
+    " [200   4   5   6]]\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
