6/12 빅분기 실기 공부

--- a/빅데이터분석기사/빅데이터분석기사_실기.md
+++ b/빅데이터분석기사/빅데이터분석기사_실기.md
@@ -317,6 +317,17 @@ series.argmin() # 가장 작은 값의 integer index
         
         - pd.get_dummies(series/df)
 
+- drop_duplicates: 중복 제거. keep = first / last에 따라 남는 값이 달라진다.
+
+```python
+df.drop_duplicates(subset='해당컬럼', keep=first/last)
+```
+
+- datetime64 형식에서 특정 일자 및 시간 인덱싱: str 형식으로 반환받은 후 비교 연산자 사용
+```python
+df['datetime'].dt.strftime(format)
+```
+
 ---
 
 ## 작업 2유형
