--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 -  1. 유튜브 인기동영상 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 -  1. 유튜브 인기동영상 데이터.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "b5e2be4a",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4  UCdWgRSfttvDucq4ApcCg5Mw     2021-01-01  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,11 +204,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9205b950",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "71\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 다시 보기\n",
+    "change = df[['channelId', 'channelTitle']].drop_duplicates()['channelId'].value_counts()\n",
+    "target = change[change > 1]\n",
+    "print(len(target))"
+   ]
   },
   {
    "attachments": {},
