--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 2. 유튜브 공범컨텐츠 동영상 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 2. 유튜브 공범컨텐츠 동영상 데이터.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e14bb86",
    "metadata": {},
@@ -94,8 +95,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                  channelid   subcnt    viewcnt  videocnt  \\\n",
-       "0  UCkQCwnkQfgSuPTTnw_Y7v7w  1310000  410238653       736   \n",
+       "                  channelid   subcnt    viewcnt  videocnt   \n",
+       "0  UCkQCwnkQfgSuPTTnw_Y7v7w  1310000  410238653       736  \\\n",
        "1  UCkQCwnkQfgSuPTTnw_Y7v7w  1310000  412531322       736   \n",
        "2  UCkQCwnkQfgSuPTTnw_Y7v7w  1310000  412531322       735   \n",
        "3  UCkQCwnkQfgSuPTTnw_Y7v7w  1310000  412531322       737   \n",
@@ -204,8 +205,8 @@
        "</div>"
       ],
       "text/plain": [
-       "       videopk  viewcnt  likecnt  dislikecnt  favoritecnt  cmcnt  \\\n",
-       "0  c5JQp6xafqc  1667010    30474         706            0   6587   \n",
+       "       videopk  viewcnt  likecnt  dislikecnt  favoritecnt  cmcnt   \n",
+       "0  c5JQp6xafqc  1667010    30474         706            0   6587  \\\n",
        "1  c5JQp6xafqc  1669089    30495         707            0   6589   \n",
        "2  c5JQp6xafqc  1674759    30522         711            0   6596   \n",
        "3  c5JQp6xafqc  1677026    30555         712            0   6604   \n",
@@ -234,6 +235,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "71e6f16f",
    "metadata": {},
@@ -243,13 +245,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b9492277",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "videoname\n",
+      " 공범 EP1    3492\n",
+      " 공범 EP2    3204\n",
+      " 공범 EP3    2568\n",
+      " 공범 EP4    2280\n",
+      " 공범 EP5    1562\n",
+      " 공범 EP6    1274\n",
+      " 공범 EP7     555\n",
+      " 공범 EP8     266\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "channel['ct'] = channel['ct'].astype(dtype='datetime64[ns]')\n",
+    "video['ct'] = video['ct'].astype(dtype='datetime64[ns]')\n",
+    "answer = video['videoname'].value_counts()\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75d4307d",
    "metadata": {},
@@ -259,13 +284,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "1af32de9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>viewcnt</th>\n",
+       "      <th>videoname</th>\n",
+       "      <th>ct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3180532</td>\n",
+       "      <td>공범 EP1</td>\n",
+       "      <td>2021-11-01 15:30:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2199328</td>\n",
+       "      <td>공범 EP2</td>\n",
+       "      <td>2021-11-01 15:30:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1671294</td>\n",
+       "      <td>공범 EP3</td>\n",
+       "      <td>2021-11-01 15:30:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1818493</td>\n",
+       "      <td>공범 EP4</td>\n",
+       "      <td>2021-11-01 15:30:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1503435</td>\n",
+       "      <td>공범 EP5</td>\n",
+       "      <td>2021-11-01 15:30:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1750222</td>\n",
+       "      <td>공범 EP6</td>\n",
+       "      <td>2021-11-01 15:30:04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1630200</td>\n",
+       "      <td>공범 EP7</td>\n",
+       "      <td>2021-11-01 15:30:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1289088</td>\n",
+       "      <td>공범 EP8</td>\n",
+       "      <td>2021-11-01 15:30:05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   viewcnt videoname                  ct\n",
+       "0  3180532    공범 EP1 2021-11-01 15:30:03\n",
+       "1  2199328    공범 EP2 2021-11-01 15:30:03\n",
+       "2  1671294    공범 EP3 2021-11-01 15:30:03\n",
+       "3  1818493    공범 EP4 2021-11-01 15:30:03\n",
+       "4  1503435    공범 EP5 2021-11-01 15:30:04\n",
+       "5  1750222    공범 EP6 2021-11-01 15:30:04\n",
+       "6  1630200    공범 EP7 2021-11-01 15:30:05\n",
+       "7  1289088    공범 EP8 2021-11-01 15:30:05"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "target = video[['viewcnt', 'videoname', 'ct']].sort_values(by=['videoname', 'ct']).drop_duplicates(['videoname'], keep='last').reset_index(drop=True)\n",
+    "display(target)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b4b2e13c",
    "metadata": {},
@@ -275,13 +399,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c2a0d131",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        channelname   subcnt\n",
+      "0            논리왕 전기   922000\n",
+      "1             야전삽짱재   257000\n",
+      "2        츄정ChuJeong   322000\n",
+      "3        김농밀의 농밀한 삶     7520\n",
+      "4       릴펄 Lilpearl    10100\n",
+      "5   와글와글 WagleWagle    55000\n",
+      "6               조나단   215000\n",
+      "7           형사!탐정되다    14900\n",
+      "8     Balming Tiger    54300\n",
+      "9     곽토리 kwak tori   471000\n",
+      "10              꽈뚜룹  1330000\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = channel.loc[channel['ct'] >= pd.to_datetime('2021-10-03'), ['channelname', 'subcnt', 'ct']].sort_values(by=['ct', 'channelname']).drop_duplicates(subset='channelname', keep='first').reset_index(drop=True)\n",
+    "answer = target[['channelname', 'subcnt']]\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "54108ef6",
    "metadata": {},
@@ -291,13 +439,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "ae033863",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>channelname</th>\n",
+       "      <th>del</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>꽈뚜룹</td>\n",
+       "      <td>70000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>야전삽짱재</td>\n",
+       "      <td>11000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>츄정ChuJeong</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>논리왕 전기</td>\n",
+       "      <td>-11000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>와글와글 WagleWagle</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>조나단</td>\n",
+       "      <td>12000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>형사!탐정되다</td>\n",
+       "      <td>10300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>김농밀의 농밀한 삶</td>\n",
+       "      <td>1540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>릴펄 Lilpearl</td>\n",
+       "      <td>11000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>곽토리 kwak tori</td>\n",
+       "      <td>-2000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Balming Tiger</td>\n",
+       "      <td>2500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        channelname    del\n",
+       "0               꽈뚜룹  70000\n",
+       "1             야전삽짱재  11000\n",
+       "2        츄정ChuJeong   1000\n",
+       "3            논리왕 전기 -11000\n",
+       "4   와글와글 WagleWagle      0\n",
+       "5               조나단  12000\n",
+       "6           형사!탐정되다  10300\n",
+       "7        김농밀의 농밀한 삶   1540\n",
+       "8       릴펄 Lilpearl  11000\n",
+       "9     곽토리 kwak tori  -2000\n",
+       "10    Balming Tiger   2500"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 다시 보기\n",
+    "\n",
+    "end = channel.loc[channel['ct'].dt.strftime('%Y-%m-%d %H') == '2021-11-01 15'].reset_index(drop=True)\n",
+    "start = channel.loc[channel['ct'].dt.strftime('%Y-%m-%d %H') == '2021-10-03 03'].reset_index(drop=True)\n",
+    "\n",
+    "end_df = end[['channelname', 'subcnt']]\n",
+    "start_df = start[['channelname', 'subcnt']]\n",
+    "\n",
+    "end_df.columns = ['channelname', 'end_sub']\n",
+    "start_df.columns = ['channelname', 'start_sub']\n",
+    "\n",
+    "tt = pd.merge(start_df, end_df)\n",
+    "tt['del'] = tt['end_sub'] - tt['start_sub']\n",
+    "result = tt[['channelname', 'del']]\n",
+    "display(result)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eec134c5",
    "metadata": {},
@@ -314,6 +583,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "95213fab",
    "metadata": {},
@@ -330,6 +600,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "057ac8a8",
    "metadata": {},
@@ -346,6 +617,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1701350f",
    "metadata": {},
@@ -362,6 +634,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a06956a9",
    "metadata": {},
@@ -378,6 +651,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "284eb10a",
    "metadata": {},
@@ -418,7 +692,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
